--- a/resumo.html
+++ b/resumo.html
@@ -150,7 +150,7 @@
                       <th>Inverter Availability (%)</th>
                       <th>Relays Availability (%)</th>
                       <th>PR (%)</th>
-                      <th style="text-align:center;"><i class="fa-regular fa-clock"></i></th>
+                      <th style="text-align:center;" title="Abrir usina"><i class="fa-solid fa-arrow-up-right-from-square" aria-hidden="true"></i></th>
                     </tr>
                   </thead>
                   <tbody id="portfolioTbody"></tbody>
