--- a/plant.html
+++ b/plant.html
@@ -7,6 +7,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/plant.css" />
+  <link rel="stylesheet" href="plant.css" />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -53,45 +54,51 @@
 
       </div>
 
-      <div class="plant-kpis">
-        <div class="kpi">
-          <div class="kpi-label">Rated Power</div>
-          <strong id="headerRatedPower">—</strong>
+      <div class="header-panels">
+        <div class="summary-station">
+          <h3 class="weather-title">Resumo da usina</h3>
+          <div class="plant-kpis">
+            <div class="kpi">
+              <div class="kpi-label">Rated Power</div>
+              <strong id="headerRatedPower">—</strong>
+            </div>
+            <div class="kpi">
+              <div class="kpi-label">Active Power</div>
+              <strong id="headerActivePower">—</strong>
+            </div>
+            <div class="kpi">
+              <div class="kpi-label">Capacidade</div>
+              <strong id="headerCapacity">—</strong>
+            </div>
+          </div>
         </div>
-        <div class="kpi">
-          <div class="kpi-label">Active Power</div>
-          <strong id="headerActivePower">—</strong>
-        </div>
-        <div class="kpi">
-          <div class="kpi-label">Capacidade</div>
-          <strong id="headerCapacity">—</strong>
+
+        <!-- WEATHER -->
+        <div class="weather-station">
+          <h3 class="weather-title">Weather Station</h3>
+
+          <div class="weather-items-row">
+            <div class="weather-item">
+              <i class="fa-solid fa-sun weather-icon"></i>
+              <span>Irradiance POA</span>
+              <strong id="weatherIrradiance">—</strong>
+            </div>
+
+            <div class="weather-item">
+              <i class="fa-solid fa-temperature-half weather-icon"></i>
+              <span>Air Temperature</span>
+              <strong id="weatherAirTemp">—</strong>
+            </div>
+
+            <div class="weather-item">
+              <i class="fa-solid fa-microchip weather-icon"></i>
+              <span>Module Temp</span>
+              <strong id="weatherModuleTemp">—</strong>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- WEATHER -->
-    <div class="weather-station">
-      <h3 class="weather-title">Weather Station</h3>
-
-      <div class="weather-item">
-        <i class="fa-solid fa-sun weather-icon"></i>
-        <span>Irradiance POA</span>
-        <strong id="weatherIrradiance">—</strong>
-      </div>
-
-      <div class="weather-item">
-        <i class="fa-solid fa-temperature-half weather-icon"></i>
-        <span>Air Temperature</span>
-        <strong id="weatherAirTemp">—</strong>
-      </div>
-
-      <div class="weather-item">
-        <i class="fa-solid fa-microchip weather-icon"></i>
-        <span>Module Temp</span>
-        <strong id="weatherModuleTemp">—</strong>
-      </div>
-    </div>
-    </section>
 
   </section>
 
